changes made to add restaurant page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
+    "@angular/localize": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
@@ -29,8 +30,12 @@
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "ionic-angular": "^3.9.10",
+    "ionic-rating-component": "^1.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
