--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cordova-plugin-geolocation": "^4.1.0",
     "ionic-angular": "^3.9.10",
     "ionic-rating-component": "^1.2.1",
+    "ionic4-rating": "^1.0.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
