--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^6.1.1",
     "@ionic/cordova-builders": "^6.1.0",
     "@ionic/storage": "^3.0.6",
@@ -37,6 +38,7 @@
     "bootstrap": "^5.1.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "ionic-angular": "^3.9.10",
+    "ionic-rating": "^2.0.0",
     "ionic-rating-component": "^1.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
