--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.4.3",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.4.3",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
@@ -37,6 +38,7 @@
     "bootstrap": "^5.1.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "ionic-angular": "^3.9.10",
+    "ionic-rating": "^2.0.0",
     "ionic-rating-component": "^1.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
